<resources>
    <string name="app_name">Calculator App</string>
    <string name="divide_zero">Cannot divide by ZERO!</string>
    <string name="null_data">You forgot to field all fields</string>
    <string name="wrong_format">Check your input data for correctness</string>
    <string name="wrong_operation">Check your operation, possible: +, -, *, /</string>
    <string name="input_first">Input first number</string>
    <string name="input_second">Input second number</string>
    <string name="input_operation">Input operation</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result:</string>
</resources>